- save /back on server close - don't add /back on death - wake up sleeping player if they tp - fix falling block stealing lol - grave recovery limit